Prevent overflow of main container

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow: hidden;
+}
+
 .drop-box {
   width: 100%;
   height: 100%;
@@ -11,6 +15,7 @@
   top: 0;
   left: 0;
   z-index: 1;
+  overflow: hidden;
   .title {
     text-transform: uppercase;
     font-weight: 700;
